added paragraph section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <img src="/game-logo.png" alt="hand drawn Tic-Tac-Toe">
       <h1>Tic-Tac-Toe</h1>
+<p> Arsenal will win manchester </p>
     </header>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
